--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 
         <div class="about-profile">
         <div class="about-avatar">
-            <img src="image/299x247_test.jpg" alt="Wahyu Hamdani">
+            <img src="image/avatar.jpg" alt="Wahyu Hamdani">
         </div>
         <h3>Web Developer</h3>
         <p>
