--- a/index.html
+++ b/index.html
@@ -43,14 +43,13 @@
     <div class="introduction">
       <h1>
         <code>&lt;h1&gt;</code>
-        <span class="index-intro">Hi,</span> I'm a Web Developer
+        <span class="index-intro">I</span>Build Fast, Scalable, and Reliable Web Applications
         <code>&lt;/h1&gt;</code>
       </h1>
 
       <p>
         <code>wahyuh.@desktop~$</code>
-        <q>Two percent is genius and ninety-eight percent is hard work.</q>
-        — Thomas A. Edison
+        <q>4+ years of experience building modern web applications for startups and growing businesses.</q>
       </p>
     </div>
   </section>
@@ -63,18 +62,16 @@
         </div>
         <h3>Web Developer</h3>
         <p>
-            At WaveGame<br>
-            Surabaya, Indonesia
+            WaveGame — Surabaya, Indonesia
         </p>
         </div>
 
         <div class="about-content">
         <div class="about-intro chat-bubble">
-            <h2>Introduction</h2>
+            <h2>Hello, I’m Wahyu.</h2>
             <p>
-                Hello, I'm Wahyu. Professional Web Developer with 4+ years of experience
-                handling website projects from small to big projects. I believe with my skills,
-                I can create modern and high-performance websites.
+                A professional Web Developer with 4+ years of experience delivering websites from small business projects to large-scale applications.
+                I specialize in building modern, secure, and high-performance web solutions.
             </p>
         </div>
 
@@ -83,30 +80,21 @@
             <div class="skill-group">
             <h4>Programming Language</h4>
             <ul>
-                <li>PHP</li>
-                <li>JavaScript (ES6)</li>
-                <li>CSS</li>
-                <li>Solidity</li>
+                <li>PHP (Backend Development)</li>
+                <li>JavaScript (ES6+)</li>
+                <li>CSS (Responsive UI)</li>
+                <li>Solidity (Smart Contracts)</li>
             </ul>
-
-            <h4>Runtime & Database</h4>
-            <ul>
-                <li>Node.js</li>
-                <li>Nginx</li>
-                <li>MySQL</li>
-            </ul>
-            </div>
 
             <div class="skill-group">
-            <h4>Framework & Library</h4>
+            <h4>Framework & Tools</h4>
             <ul>
-                <li>React</li>
-                <li>Laravel</li>
-                <li>Vue</li>
+                <li>React / Vue (Frontend Apps)</li>
+                <li>Laravel (REST API & Backend)</li>
+                <li>Node.js (Server Runtime)</li>
+                <li>Web3.js & Truffle (Blockchain)</li>
                 <li>Bootstrap</li>
                 <li>jQuery</li>
-                <li>Web3.js</li>
-                <li>Truffle</li>
             </ul>
             </div>
         </div>
@@ -118,6 +106,7 @@
     <div class="contact-container">
         <div class="contact-info">
             <h2>Contact</h2>
+            <p>Let’s work together — feel free to reach out.</p>
             <ul class="contact-list">
                 <li>
                 <i class="ri ri-mail-line"></i>
