--- a/index.html
+++ b/index.html
@@ -114,15 +114,21 @@
                     <ul class="contact-list">
                         <li>
                             <i class="ri ri-mail-line"></i>
-                            <span>mrhamdani0101@gmail.com</span>
+                            <a href="mailto:mrhamdani0101@gmail.com">
+                                mrhamdani0101@gmail.com
+                            </a>
                         </li>
                         <li>
                             <i class="ri ri-github-line"></i>
-                            <span>github.com/hamdani0101</span>
+                            <a href="https://github.com/hamdani0101" target="_blank" rel="noopener noreferrer">
+                                github.com/hamdani0101
+                            </a>
                         </li>
                         <li>
                             <i class="ri ri-linkedin-box-line"></i>
-                            <span>linkedin.com/in/wahyu-hamdani</span>
+                            <a href="https://linkedin.com/in/wahyu-hamdani" target="_blank" rel="noopener noreferrer">
+                                linkedin.com/in/wahyu-hamdani
+                            </a>
                         </li>
                     </ul>
                 </div>
