--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
                         </li>
                         <li>
                             <i class="ri ri-linkedin-box-line"></i>
-                            <a href="https://linkedin.com/in/wahyu-hamdani" target="_blank" rel="noopener noreferrer">
+                            <a href="https://www.linkedin.com/in/wahyu-hamdani-062030369" target="_blank" rel="noopener noreferrer">
                                 linkedin.com/in/wahyu-hamdani
                             </a>
                         </li>
