--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
                 </div>
             </div>
             <p class="copyright">
-                © 2026 Wahyu Hamdani
+                © <span id="current-year"></span> Wahyu Hamdani
             </p>
         </section>
     </main>
